fix elements position (z-index); add 2 restaurants;

--- a/src/css/components/_piao.scss
+++ b/src/css/components/_piao.scss
@@ -51,6 +51,7 @@
     -webkit-transform-style: preserve-3d;
     -moz-transform-style: preserve-3d;
     transform-style: preserve-3d;
+    z-index: -1;
 }
 
 #moldura {
